# jep-agent-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  validate.py  validate.sh
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: API.md  ARCHITECTURE.md
examples/: 01_minimal_skill.py  02_langchain_agent.py  03_openai_agents.py  04_mcp_server.py  05_jac_cross_agent.py  06_determinability_gate.py
jep/: __init__.py  determinability.py  primitives.py  recorder.py
jep/adapters/: __init__.py  langchain.py  mcp.py  openai_agents.py
jep/cli/: __init__.py  main.py
jep/core/: __init__.py  chain.py  event.py  verifier.py
jep/extensions/: __init__.py  jac.py
jep/web/: __init__.py  server.py
jep/web/static/: index.html
tests/: __init__.py  test_adapters.py  test_chain.py  test_core.py  test_crypto.py  test_determinability.py  test_verifier.py
